// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration email obfuscation displays email values when user is an admin 1`] = `
Object {
  "data": Object {
    "registrations": Object {
      "nodes": Array [
        Object {
          "email": "[email-1]",
          "id": "[id-1]",
        },
        Object {
          "email": "[email-2]",
          "id": "[id-2]",
        },
        Object {
          "email": "[email-3]",
          "id": "[id-3]",
        },
        Object {
          "email": "[email-4]",
          "id": "[id-4]",
        },
        Object {
          "email": "[email-5]",
          "id": "[id-5]",
        },
      ],
    },
  },
}
`;

exports[`Registration email obfuscation displays own registration email address but hides others for a logged in user that is not admin 1`] = `
Object {
  "data": Object {
    "registrations": Object {
      "nodes": Array [
        Object {
          "email": "[email-1]",
          "id": "[id-1]",
        },
        Object {
          "email": "[email-2]",
          "id": "[id-2]",
        },
        Object {
          "email": "[email-2]",
          "id": "[id-3]",
        },
      ],
    },
  },
}
`;

exports[`Registration email obfuscation masks email values when user is logged out 1`] = `
{
  "data": {
    "registrations": {
      "nodes": [
        {
          "email": "[email-1]",
          "id": "[id-1]",
        },
      ],
    },
  },
}
`;

exports[`Registration email obfuscation masks email values when user is not an admin 1`] = `
{
  "data": {
    "registrations": {
      "nodes": [
        {
          "email": "[email-1]",
          "id": "[id-1]",
        },
        {
          "email": "[email-1]",
          "id": "[id-2]",
        },
        {
          "email": "[email-1]",
          "id": "[id-3]",
        },
      ],
    },
  },
}
`;
